Создает дефолтные значения функций

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Домашняя работа №12</title>
+    <title>Homework №12</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -18,7 +18,7 @@
         <input type="text" class="form-control" name="query" />
       </div>
 
-      <button type="submit" class="btn btn-primary">Искать</button>
+      <button type="submit" class="btn btn-primary">Search</button>
     </form>
 
     <div class="js-card-container"></div>
