Добавляет lodash.debounce

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <input type="text" class="form-control" name="query" />
       </div>
 
-      <button type="submit" class="btn btn-primary">Search</button>
+      <!-- <!-- <button type="submit" class="btn btn-primary">Search</button> -->
     </form>
 
     <div class="js-card-container"></div>
